# ShapeToSVG

./: README.md  ShapeToSVG.cabal
src/: BlzSvg.lhs  Main.lhs  Shapes.lhs
