name:                ShapeToSVG
version:             0.1.0.0
synopsis:            Converts Shape DSL to SVG
description:         Converts Shape DSL to SVG
homepage:            https://github.com/cal2195/ShapeToSVG
license:             MIT
license-file:        LICENSE
author:              Cal Martin
maintainer:          cmartin7@tcd.ie
copyright:           2017 Cal Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ShapeToSVG
  hs-source-dirs:      src
  main-is:             Main.lhs
  other-modules:       Shapes, BlzSvg
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       matrix,
                       blaze-svg,
                       blaze-html,
                       scotty,
                       text,
                       unix
